@@ -81,7 +81,7 @@ void CGUIRSSControl::SetIntervals(const vector<int>& vecIntervals)
 
 void CGUIRSSControl::Render()
 {
-  if ( (!UpdateVisibility()) || g_application.IsPlayingVideo() || !g_guiSettings.GetBool("LookAndFeel.EnableRSSFeeds") || !g_guiSettings.GetBool("Network.EnableInternet"))
+  if ( (!UpdateVisibility()) || !g_guiSettings.GetBool("LookAndFeel.EnableRSSFeeds") || !g_guiSettings.GetBool("Network.EnableInternet"))
   {
     return ;
   }
