@@ -42,8 +42,9 @@ protected:
   INPUT_MODE m_mode;                // the current input mode
   SYSTEMTIME m_datetime;            // for time and date modes
   WORD m_ip[4];                     // for ip address mode
-  __int64 m_integer;                // for password/numeric input modes
+  __int64 m_integer;                // for numeric input modes
   unsigned int m_block;             // for time, date, and IP methods.
   unsigned int m_lastblock;
   bool m_dirty;                     // true if the current block has been changed.
+  CStdString m_password;            // for password input
 };
