@@ -125,6 +125,9 @@ void CGUIDialogOK::SetHeading(int iString)
 void CGUIDialogOK::SetLine(int iLine, int iString)
 {
   CGUIMessage msg(GUI_MSG_LABEL_SET, GetID(), iLine + 2);
-  msg.SetLabel(iString);
+  if (iString)
+    msg.SetLabel(iString);
+  else
+    msg.SetLabel("");
   OnMessage(msg);
 }
